[tool.poetry]
name = "dcvb"
version = "0.1.0"
description = "Docker Compose Volume Backup is a tool to backup all volumes found in a docker-compose.yaml file"
authors = ["Freek van Hemert <freek@protonmail.ch>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
